--- a/TPIntegrador2_REDES_NEURONALES_.ipynb
+++ b/TPIntegrador2_REDES_NEURONALES_.ipynb
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 304,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 305,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -223,7 +223,7 @@
               "9  20102    22.5    15.6   AEROPARQUE AERO"
             ]
           },
-          "execution_count": 305,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 306,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -312,7 +312,7 @@
               "max    31122.000000"
             ]
           },
-          "execution_count": 306,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -323,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 307,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 308,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -367,13 +367,7 @@
             " 2   TMIN    40030 non-null  object\n",
             " 3   NOMBRE  40030 non-null  object\n",
             "dtypes: object(4)\n",
-            "memory usage: 1.5+ MB\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
+            "memory usage: 1.5+ MB\n",
             "<class 'pandas.core.frame.DataFrame'>\n",
             "Index: 40030 entries, 0 to 43678\n",
             "Data columns (total 4 columns):\n",
@@ -440,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 309,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -500,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 310,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -513,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 311,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -554,7 +548,7 @@
               "Index: []"
             ]
           },
-          "execution_count": 311,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -568,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 312,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -687,7 +681,7 @@
               "1104  20/10/2023  20.9  2.7   BARILOCHE AERO"
             ]
           },
-          "execution_count": 312,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -704,14 +698,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 313,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_17796\\1908534953.py:2: SettingWithCopyWarning: \n",
+            "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_8420\\1908534953.py:2: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -801,7 +795,7 @@
               "1099  25/10/2023  20.2 -0.6   BARILOCHE AERO   9.8"
             ]
           },
-          "execution_count": 313,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -842,20 +836,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 315,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_17796\\3549615397.py:21: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_filtrado.loc[:, 'PRECIO'] = df_filtrado['TPROM'].apply(lambda x: f(x))\n"
-          ]
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>FECHA</th>\n",
+              "      <th>TMAX</th>\n",
+              "      <th>TMIN</th>\n",
+              "      <th>NOMBRE</th>\n",
+              "      <th>TPROM</th>\n",
+              "      <th>PRECIO</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1095</th>\n",
+              "      <td>29/10/2023</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>-0.3</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>1.6</td>\n",
+              "      <td>255.52</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1096</th>\n",
+              "      <td>28/10/2023</td>\n",
+              "      <td>8.4</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>4.25</td>\n",
+              "      <td>310.35</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1097</th>\n",
+              "      <td>27/10/2023</td>\n",
+              "      <td>11.9</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>9.25</td>\n",
+              "      <td>421.35</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1098</th>\n",
+              "      <td>26/10/2023</td>\n",
+              "      <td>14.4</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>10.5</td>\n",
+              "      <td>447.10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1099</th>\n",
+              "      <td>25/10/2023</td>\n",
+              "      <td>20.2</td>\n",
+              "      <td>-0.6</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>9.8</td>\n",
+              "      <td>450.56</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           FECHA  TMAX TMIN           NOMBRE TPROM  PRECIO\n",
+              "1095  29/10/2023   3.5 -0.3   BARILOCHE AERO   1.6  255.52\n",
+              "1096  28/10/2023   8.4  0.1   BARILOCHE AERO  4.25  310.35\n",
+              "1097  27/10/2023  11.9  6.6   BARILOCHE AERO  9.25  421.35\n",
+              "1098  26/10/2023  14.4  6.6   BARILOCHE AERO  10.5  447.10\n",
+              "1099  25/10/2023  20.2 -0.6   BARILOCHE AERO   9.8  450.56"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -865,21 +939,166 @@
         "# t temperatura promedio en este caso\n",
         "# b es el precio que tendria el helado cuando la temperatura seria 0°. \n",
         "\n",
-        "# Vamos a suponer que la menos temperatura a la cual una persona normal compra un helado es de -100 y el precio al cual lo compraria seria a $1.\n",
-        "# Vamos a suponer tambien que la mayor temperatura sera 50° y el precio en ese momento sera de $5000.\n",
-        "# Dadas esas suposiciones tenemos dos puntos de la recta que determinara el precio, tenemos (-100,1) y (50, 5000) \n",
+        "# Vamos a suponer que la menos temperatura a la cual una persona normal compra un helado es de -10 y el precio al cual lo compraria seria a $1.\n",
+        "# Vamos a suponer tambien que la mayor temperatura sera 35° y el precio en ese momento sera de $1000.\n",
+        "# Dadas esas suposiciones tenemos dos puntos de la recta que determinara el precio, tenemos (-10,1) y (35, 1000) \n",
         "# Calculamos m y b, \n",
-        "# m = (y2 - y1) / (x2 - x1) -> En nuestro caso es m = (5000 - 1)/(50 - (-100)) = 33,32666... redondeando m = 33,33\n",
+        "# m = (y2 - y1) / (x2 - x1) -> En nuestro caso es m = (1000 - 1)/(35 - (-10)) = 22,2. Por lo tanto m = 22,2\n",
         "# luego la recta que aproximadamente pasa por los 2 puntos es p - y1 = m(t - x1)\n",
         "# reemplazando\n",
-        "# p - 1 = 33,33(t - (-100)) -> p = 33,33 t + 3334\n",
+        "# p - 1 = 22,2(t - (-10)) -> p = 22,2 t + 223\n",
         "\n",
-        "m = 33.33\n",
-        "b = 3334\n",
+        "m = 22.2\n",
+        "b = 223\n",
         "def f(x):\n",
-        "    return m * x + b\n",
+        "    e = np.random.randint(-10,11) # Agregamos un error para que los precios que se generen, lo hagan alrededor de la recta \n",
+        "    return m * x + b + e\n",
         "\n",
-        "df_filtrado.loc[:, 'PRECIO'] = df_filtrado['TPROM'].apply(lambda x: f(x))\n"
+        "df_filtrado.loc[:, 'PRECIO'] = df_filtrado['TPROM'].apply(lambda x: f(x))\n",
+        "df_filtrado.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_8420\\3169228338.py:9: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_filtrado['COMPRA'] = df_filtrado['COMPRA'].astype(int)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Agregamos la variable categorica\n",
+        "# En este caso lo que entendi fue que si el precio supero al precio promedio entonces la probabilidad de que compre el helado cae a un 20% y \n",
+        "# en caso de que el precio se encuentre debajo del promedio la probabilidad de que compre el helado sube al 80%\n",
+        "# Por lo tanto creamos 2 mascaras, una para seleccionar solo las filas cuya columna precio supere la media del precio total y la otra la cual no cruzan dicho \n",
+        "# umbral, si lo cruza entonces se generaran numeros entree 0 y 1 como si fuese un dado trucado cuya probabilidad de que toque 0 es del 80% y esto\n",
+        "# sera analogo en caso de que no lo pase\n",
+        "mask = df_filtrado['PRECIO'] > df_filtrado['PRECIO'].mean()\n",
+        "df_filtrado.loc[mask, 'COMPRA'] = np.random.choice(np.arange(0, 2), p=[0.8, 0.2])\n",
+        "\n",
+        "\n",
+        "mask = df_filtrado['PRECIO'] <= df_filtrado['PRECIO'].mean()\n",
+        "df_filtrado.loc[mask, 'COMPRA'] = np.random.choice(np.arange(0, 2), p=[0.2, 0.8])\n",
+        "\n",
+        "df_filtrado['COMPRA'] = df_filtrado['COMPRA'].astype(int)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>FECHA</th>\n",
+              "      <th>TMAX</th>\n",
+              "      <th>TMIN</th>\n",
+              "      <th>NOMBRE</th>\n",
+              "      <th>TPROM</th>\n",
+              "      <th>PRECIO</th>\n",
+              "      <th>COMPRA</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1095</th>\n",
+              "      <td>29/10/2023</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>-0.3</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>1.6</td>\n",
+              "      <td>255.52</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1096</th>\n",
+              "      <td>28/10/2023</td>\n",
+              "      <td>8.4</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>4.25</td>\n",
+              "      <td>310.35</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1097</th>\n",
+              "      <td>27/10/2023</td>\n",
+              "      <td>11.9</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>9.25</td>\n",
+              "      <td>421.35</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1098</th>\n",
+              "      <td>26/10/2023</td>\n",
+              "      <td>14.4</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>10.5</td>\n",
+              "      <td>447.10</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1099</th>\n",
+              "      <td>25/10/2023</td>\n",
+              "      <td>20.2</td>\n",
+              "      <td>-0.6</td>\n",
+              "      <td>BARILOCHE AERO</td>\n",
+              "      <td>9.8</td>\n",
+              "      <td>450.56</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           FECHA  TMAX TMIN           NOMBRE TPROM  PRECIO  COMPRA\n",
+              "1095  29/10/2023   3.5 -0.3   BARILOCHE AERO   1.6  255.52       1\n",
+              "1096  28/10/2023   8.4  0.1   BARILOCHE AERO  4.25  310.35       1\n",
+              "1097  27/10/2023  11.9  6.6   BARILOCHE AERO  9.25  421.35       1\n",
+              "1098  26/10/2023  14.4  6.6   BARILOCHE AERO  10.5  447.10       0\n",
+              "1099  25/10/2023  20.2 -0.6   BARILOCHE AERO   9.8  450.56       0"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_filtrado.head()"
       ]
     },
     {
