Pensamos en el ejercicio 3

--- a/TPIntegrador2_REDES_NEURONALES_.ipynb
+++ b/TPIntegrador2_REDES_NEURONALES_.ipynb
@@ -1115,6 +1115,24 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X = df_filtrado['PRECIO','TPROM']\n",
+        "Y = df_filtrado['COMPRA']\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+        "# En este punto no logre entender que es lo que realmente se pide, ya que en mayusculas nos dice que generemos 3 érceptrones \n",
+        "# siguiendo los ejemplos de perceptron vistos en clase, pero en minusculas nos indica que creemos un modelo siguiendo el ejemplo B2 etapa 4\n",
+        "# el cual nos muestra como crear un modelo. Sin embargo luego continua en mayusculas declarando condiciones para la salida de los perceptrones\n",
+        "\n",
+        "# Probemos con perceptrones\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Q2wopJgTECIF"
